--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaulConnection": "Server=.;Database=HMSAPI;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "Key": "MySecretKeyIsHmsAPIStrongPassword",
+    "Issuer": "HMSAPI",
+    "Audience": "HMSAPIUsers",
+    "ExpirationInMinutes": 60
   }
 }
