Update services and controllers

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaulConnection": "Server=.;Database=HMSAPI;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaulConnection": "Server=DESKTOP-7OIAFLS\\MSSQLSERVER2019;Database=HMSAPI;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "JwtSettings": {
-    "Key": "MySecretKeyIsHmsAPIStrongPassword",
+    "Key": "MySecretKeyIsHmsAPIStrongPasswordForSecurity",
     "Issuer": "HMSAPI",
     "Audience": "HMSAPIUsers",
     "ExpirationInMinutes": 60
